--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -77,7 +77,7 @@
  HEN_ADJ: "Hessian"
  EPR: "East Prussia"
  EPR_ADJ: "Prussian"
- HNS: "Hansa"
+ HNS: "Hanseatic League"
  HNS_ADJ: "Hanseatic"
  ERO: "Emilia-Romagna"
  ERO_ADJ: "Romagnan"
