--- a/localisation/dec1_tooltips_l_english.yml
+++ b/localisation/dec1_tooltips_l_english.yml
@@ -74,6 +74,8 @@
 
  form_deccan_nation_tt_1: "Owns all cores of the §YDeccan§! region"
 
+ form_romanian_nation_tt_1: "Owns all §YRomanian§! provinces"
+
  ######################
  # OTHER LOCALISATION #
  ######################
