--- a/localisation/dec1_tooltips_l_english.yml
+++ b/localisation/dec1_tooltips_l_english.yml
@@ -8,9 +8,11 @@
 
  dec1_cisalpina_cannot_form_italy: "§R§YCisalpina§! can NOT form §YItaly§!§!"
 
+ restore_papal_states_nation_tt_1: "Any controller of original papal provinces can restore the Papal States!"
+ dec1_papal_states_notif: "§RIf you form the §YPapal States§! you will become §YThe Pope§! and become locked out of any possible reformation to another country and must take on the responsibility of the true §YMessenger of God§!.. Choose carefully!§!\n"
  dec1_papal_influence: "All neighbors of the newly elected pope gain §G25§! §YPapal Influence§!"
 
- form_spanish_nation_tt_1: "Owns core region: §YIberia§!"
+ form_spanish_nation_tt_1: "Owns all core §YSpanish§! provinces"
 
  form_spanish_nation_claims: "§YSpain§! gains a permanent claim on §YIberia§! Region."
 
@@ -74,7 +76,9 @@
 
  form_deccan_nation_tt_1: "Owns all cores of the §YDeccan§! region"
 
- form_romanian_nation_tt_1: "Owns all §YRomanian§! provinces"
+ form_romanian_nation_tt_1: "Owns all core §YRomanian§! provinces"
+
+ form_celtic_union_tt_1: "Owns all cores of the §YCeltic Union§!"
 
  ######################
  # OTHER LOCALISATION #
