--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -37,8 +37,8 @@
  CZE_ADJ: "Czech"
  NSE: "North Sea Empire"
  NSE_ADJ: "Nordic"
- ROE: "Roman Empire"
- ROE_ADJ: "Roman"
+ ROP: "Roman Republic"
+ ROP_ADJ: "Roman"
  CIS: "Cisalpina"
  CIS_ADJ: "Cisalpinian"
  TRR: "Turkey"
